--- a/css/theme/moon-bruin.css
+++ b/css/theme/moon-bruin.css
@@ -4,6 +4,7 @@
  */
 @import url(../../lib/font/league-gothic/league-gothic.css);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700,700i,800,800i,900,900i');
 /**
  * Solarized colors by Ethan Schoonover
  */
@@ -50,7 +51,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eee8d5;
-  font-family: "League Gothic", Impact, sans-serif;
+  font-family: Raleway, Impact, sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
