--- a/css/theme/source/moon-bruin.scss
+++ b/css/theme/source/moon-bruin.scss
@@ -14,6 +14,7 @@
 // Include theme-specific fonts
 @import url(../../lib/font/league-gothic/league-gothic.css);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700,700i,800,800i,900,900i');
 
 /**
  * Solarized colors by Ethan Schoonover
